2010-06-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Cisco/Catalyst_2960.pm: Documented a bug with IOS 
	12.2(25r) and VoIP. Also filed as #1200 for reference.
	http://www.packetfence.org/bugs/view.php?id=1020

2010-06-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence.pl: Using NAS-IP-Address, a 
	radius standard attribute, instead of Client-IP-Address as the switch IP
	address. Module now works with freeradius2. Fixes #1007;
	http://www.packetfence.org/bugs/view.php?id=1007

2010-06-01	Olivier Bilodeau <obilodeau@inverse.ca>
	PacketFence 1.9.0-0.20100601 aka PacketFence 1.9.0rc1

2010-05-25	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/bin/pfcmd: Fixed bug #833 again using hard-references this time. 
	Tricky perl stuff...

	* pf/lib/pf/node.pm: Fixed a bug with new node categories where a node
	edit without a category would remove the category.

	* pf/lib/services.pm: Added validation and proper error message on 
	startup when SNMPVersion or SNMPVersionTrap is missing from 
	conf/switches.conf. Fixes #993;
	http://www.packetfence.org/bugs/view.php?id=993

	* pf/t/all.t, pf/t/node.t: Added tests to prevent regressions in subs
	that reads data in pf::node

2010-05-25	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/node.pm: Fixed a bug introduced with new node categories in
	node_view_with_fingerprint.
	
2010-05-18	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/node.pm: Fixed a regression I introduced in revno 
	a7c168dcd6e42180e15dc166feb7167ddc36bc8f in node_modify (pfcmd node 
	edit). Now fixed so its properly updating nodes again.

	* pf/packetfence.spec: A file (conf/floating_network_device.conf) was 
	left out of the RPM spec for Floating Network Device support. This has 
	been fixed.

	* pf/bin/pfcmd: Changed other soft-referenced function calls that were
	failing with the updated Parse::RecDescent module.

	* pf/bin/pfcmd: Replaced all hard-coded line numbers with __LINE__ perl