@@ -60,6 +60,8 @@ Cisco 3560                   |    XX    |    XX    |    XX    |    XX    |
 -----------------------------|----------|----------|----------|----------|
 Cisco 3750                   |    XX    |    XX    |    XX    |    XX    |
 -----------------------------|----------|----------|----------|----------|
+Cisco 4500                   |    XX    |    XX    |    XX    |    XX    |
+-----------------------------|----------|----------|----------|----------|
 Cisco ISR 1800 Series        |    XX    |    --    |    --    |    ??    |
 -----------------------------|----------|----------|----------|----------|
 Dell PowerConnect 3424       |    XX    |    --    |    --    |    --    |
