@@ -28,6 +28,7 @@ BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3500XL') }
 BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3550') }
 BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3560') }
 BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3750') }
+BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_4500') }
 BEGIN { use_ok('pf::SNMP::Cisco::ISR_1800') }
 BEGIN { use_ok('pf::SNMP::Cisco::WiSM') }
 BEGIN { use_ok('pf::SNMP::Cisco::WLC_2106') }
@@ -94,6 +95,7 @@ my @SNMPobjects = qw(
     pf::SNMP::Cisco::Catalyst_3550
     pf::SNMP::Cisco::Catalyst_3560
     pf::SNMP::Cisco::Catalyst_3750
+    pf::SNMP::Cisco::Catalyst_4500
     pf::SNMP::Cisco::ISR_1800
     pf::SNMP::Cisco::WiSM
     pf::SNMP::Cisco::WLC_2106
