@@ -23,6 +23,7 @@ New Hardware Support
 - Cisco Wireless Services Module (WiSM)
 - Cisco Integrated Services Routers (ISR) 1800 Series
 - Cisco Catalyst 3750 Series
+- Cisco Catalyst 4500 Series
 - Port security and Voice over IP support for Foundry FastIron 4802 (feature 
   sponsored by an entity who prefered to remain anonymous)
 
